@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#1023] Handle Internationalized Domain Names (IDN) like Яндекс.рф on
+  platforms where getaddrinfo supports the AI_IDN flag. [Daniel Miller]
+
 o Avoid storing many small strings from IPv4 OS detection results in the global
   string_pool. These were effectively leaked after a host is done being
   scanned, since string_pool allocations are not freed until Nmap quits.
